feat: setup logging

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
       - id: name-tests-test
         args: [--pytest-test-first]
       - id: pretty-format-json
-        args: [--autofix]
+        args: [--autofix, --no-sort-keys]
       - id: trailing-whitespace
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
