--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Hitster CLI clone"
 readme = "README.md"
 authors = [{ name = "Michał Pindel", email = "m.pindel7991@gmail.com" }]
 requires-python = ">=3.13"
-dependencies = ["python-json-logger>=3.2.1", "typer>=0.15.1"]
+dependencies = ["python-json-logger>=3.2.1", "spotipy>=2.25.0", "typer>=0.15.1"]
 
 [project.scripts]
 pinster = "pinster.main:app"
@@ -19,6 +19,7 @@ dev = ["pre-commit>=4.1.0"]
 
 [tool.pyright]
 typeCheckingMode = "strict"
+reportMissingTypeStubs = "warning"
 
 [tool.ruff.lint]
 ignore = [
@@ -38,6 +39,8 @@ ignore = [
     "COM819",
     # custom
     "ANN204",
+    "TD002",
+    "TD003",
 ]
 select = ["ALL"]
 
