--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
       - id: mixed-line-ending
       - id: name-tests-test
         args: [--pytest-test-first]
+      - id: no-commit-to-branch
       - id: pretty-format-json
         args: [--autofix, --no-sort-keys]
       - id: trailing-whitespace
