--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,12 @@ description = "Hitster CLI clone"
 readme = "README.md"
 authors = [{ name = "pin" }]
 requires-python = ">=3.13"
-dependencies = ["python-json-logger>=3.2.1", "spotipy>=2.25.0", "typer>=0.15.1"]
+dependencies = [
+    "platformdirs>=4.3.6",
+    "python-json-logger>=3.2.1",
+    "spotipy>=2.25.0",
+    "typer>=0.15.1",
+]
 
 [project.scripts]
 pinster = "pinster.main:app"
@@ -46,8 +51,3 @@ select = ["ALL"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
-
-[[tool.uv.index]]
-name = "testpypi"
-url = "https://test.pypi.org/simple/"
-publish-url = "https://test.pypi.org/legacy/"
