--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 authors = [{ name = "pin" }]
 requires-python = ">=3.13"
 dependencies = [
+    "httpx>=0.28.1",
     "platformdirs>=4.3.6",
     "python-json-logger>=3.2.1",
     "spotipy>=2.25.0",
