--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = [{ name = "pin" }]
 requires-python = ">=3.13"
 dependencies = [
     "httpx>=0.28.1",
+    "lxml>=5.3.0",
+    "pandas>=2.2.3",
     "platformdirs>=4.3.6",
     "pydantic>=2.10.6",
     "python-json-logger>=3.2.1",
